--- a/package.json
+++ b/package.json
@@ -1,27 +1,52 @@
 {
-  "name": "music-is-legal-weed",
+  "name": "nextjs-tailwindcss-typescript-template",
   "version": "0.1.0",
+  "author": {
+    "name": "Nahee-Park",
+    "email": "nahee.developer@gmail.com"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write .",
+    "lint:css": "stylelint --ignore-path .gitignore '**/*.(css|tsx)' --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@titicaca/stylelint-config-triple": "^1.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "husky": "^8.0.3",
+    "import": "^0.0.6",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8",
+    "react-hooks": "^1.0.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "*.+{json|css|md}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
